--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Dock -->
         <div class="dock">
             <div class="dock-item" data-app="firefox">
-                <img src="assets/layer 4.png" alt="FireFox" class="dock-icon">
+                <img src="assets/Layer 4.png" alt="FireFox" class="dock-icon">
                 <span class="dock-label">FireFox</span>
             </div>
                     <div class="dock-item" data-app="3d" class="coming-soon">
@@ -69,7 +69,7 @@
                 <span class="dock-label">Jupiter</span>
             </div>
             <div class="dock-item" data-app="soundcloud">
-                <img src="assets/layer 5.png" alt="SoundCloud" class="dock-icon">
+                <img src="assets/Layer 5.png" alt="SoundCloud" class="dock-icon">
                 <span class="dock-label">SoundCloud</span>
             </div>
             <div class="dock-item" data-app="trash">
@@ -113,7 +113,7 @@
                     <div class="soundcloud-control soundcloud-maximize"></div>
                 </div>
                 <div class="soundcloud-title-bar">
-                    <img src="assets/layer 5.png" alt="SoundCloud" class="soundcloud-title-icon">
+                    <img src="assets/Layer 5.png" alt="SoundCloud" class="soundcloud-title-icon">
                     <span class="soundcloud-title">SoundCloud</span>
                 </div>
             </div>
