Add 84 new images to Epic Smiles Gallery
- Added images 901.png through 984.png to the gallery
- Gallery now contains 116 total images (was 32)
- All new images are clickable and open in the image modal
- Images are properly numbered and labeled for easy navigation

--- a/index.html
+++ b/index.html
@@ -236,6 +236,258 @@
                     <div class="epic-smiles-image" onclick="openImageModal('epic smiles/415fe24b24f14de3f900b6deb28dd253.jpg')">
                         <img src="epic smiles/415fe24b24f14de3f900b6deb28dd253.jpg" alt="Epic Smiles 32">
                     </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/901.png')">
+                        <img src="epic smiles/901.png" alt="Epic Smile 33">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/902.png')">
+                        <img src="epic smiles/902.png" alt="Epic Smile 34">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/903.png')">
+                        <img src="epic smiles/903.png" alt="Epic Smile 35">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/904.png')">
+                        <img src="epic smiles/904.png" alt="Epic Smile 36">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/905.png')">
+                        <img src="epic smiles/905.png" alt="Epic Smile 37">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/906.png')">
+                        <img src="epic smiles/906.png" alt="Epic Smile 38">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/907.png')">
+                        <img src="epic smiles/907.png" alt="Epic Smile 39">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/908.png')">
+                        <img src="epic smiles/908.png" alt="Epic Smile 40">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/909.png')">
+                        <img src="epic smiles/909.png" alt="Epic Smile 41">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/910.png')">
+                        <img src="epic smiles/910.png" alt="Epic Smile 42">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/911.png')">
+                        <img src="epic smiles/911.png" alt="Epic Smile 43">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/912.png')">
+                        <img src="epic smiles/912.png" alt="Epic Smile 44">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/913.png')">
+                        <img src="epic smiles/913.png" alt="Epic Smile 45">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/914.png')">
+                        <img src="epic smiles/914.png" alt="Epic Smile 46">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/915.png')">
+                        <img src="epic smiles/915.png" alt="Epic Smile 47">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/916.png')">
+                        <img src="epic smiles/916.png" alt="Epic Smile 48">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/917.png')">
+                        <img src="epic smiles/917.png" alt="Epic Smile 49">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/918.png')">
+                        <img src="epic smiles/918.png" alt="Epic Smile 50">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/919.png')">
+                        <img src="epic smiles/919.png" alt="Epic Smile 51">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/920.png')">
+                        <img src="epic smiles/920.png" alt="Epic Smile 52">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/921.png')">
+                        <img src="epic smiles/921.png" alt="Epic Smile 53">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/922.png')">
+                        <img src="epic smiles/922.png" alt="Epic Smile 54">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/923.png')">
+                        <img src="epic smiles/923.png" alt="Epic Smile 55">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/924.png')">
+                        <img src="epic smiles/924.png" alt="Epic Smile 56">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/925.png')">
+                        <img src="epic smiles/925.png" alt="Epic Smile 57">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/926.png')">
+                        <img src="epic smiles/926.png" alt="Epic Smile 58">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/927.png')">
+                        <img src="epic smiles/927.png" alt="Epic Smile 59">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/928.png')">
+                        <img src="epic smiles/928.png" alt="Epic Smile 60">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/929.png')">
+                        <img src="epic smiles/929.png" alt="Epic Smile 61">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/930.png')">
+                        <img src="epic smiles/930.png" alt="Epic Smile 62">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/931.png')">
+                        <img src="epic smiles/931.png" alt="Epic Smile 63">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/932.png')">
+                        <img src="epic smiles/932.png" alt="Epic Smile 64">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/933.png')">
+                        <img src="epic smiles/933.png" alt="Epic Smile 65">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/934.png')">
+                        <img src="epic smiles/934.png" alt="Epic Smile 66">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/935.png')">
+                        <img src="epic smiles/935.png" alt="Epic Smile 67">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/936.png')">
+                        <img src="epic smiles/936.png" alt="Epic Smile 68">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/937.png')">
+                        <img src="epic smiles/937.png" alt="Epic Smile 69">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/938.png')">
+                        <img src="epic smiles/938.png" alt="Epic Smile 70">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/939.png')">
+                        <img src="epic smiles/939.png" alt="Epic Smile 71">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/940.png')">
+                        <img src="epic smiles/940.png" alt="Epic Smile 72">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/941.png')">
+                        <img src="epic smiles/941.png" alt="Epic Smile 73">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/942.png')">
+                        <img src="epic smiles/942.png" alt="Epic Smile 74">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/943.png')">
+                        <img src="epic smiles/943.png" alt="Epic Smile 75">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/944.png')">
+                        <img src="epic smiles/944.png" alt="Epic Smile 76">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/945.png')">
+                        <img src="epic smiles/945.png" alt="Epic Smile 77">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/946.png')">
+                        <img src="epic smiles/946.png" alt="Epic Smile 78">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/947.png')">
+                        <img src="epic smiles/947.png" alt="Epic Smile 79">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/948.png')">
+                        <img src="epic smiles/948.png" alt="Epic Smile 80">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/949.png')">
+                        <img src="epic smiles/949.png" alt="Epic Smile 81">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/950.png')">
+                        <img src="epic smiles/950.png" alt="Epic Smile 82">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/951.png')">
+                        <img src="epic smiles/951.png" alt="Epic Smile 83">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/952.png')">
+                        <img src="epic smiles/952.png" alt="Epic Smile 84">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/953.png')">
+                        <img src="epic smiles/953.png" alt="Epic Smile 85">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/954.png')">
+                        <img src="epic smiles/954.png" alt="Epic Smile 86">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/955.png')">
+                        <img src="epic smiles/955.png" alt="Epic Smile 87">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/956.png')">
+                        <img src="epic smiles/956.png" alt="Epic Smile 88">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/957.png')">
+                        <img src="epic smiles/957.png" alt="Epic Smile 89">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/958.png')">
+                        <img src="epic smiles/958.png" alt="Epic Smile 90">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/959.png')">
+                        <img src="epic smiles/959.png" alt="Epic Smile 91">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/960.png')">
+                        <img src="epic smiles/960.png" alt="Epic Smile 92">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/961.png')">
+                        <img src="epic smiles/961.png" alt="Epic Smile 93">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/962.png')">
+                        <img src="epic smiles/962.png" alt="Epic Smile 94">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/963.png')">
+                        <img src="epic smiles/963.png" alt="Epic Smile 95">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/964.png')">
+                        <img src="epic smiles/964.png" alt="Epic Smile 96">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/965.png')">
+                        <img src="epic smiles/965.png" alt="Epic Smile 97">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/966.png')">
+                        <img src="epic smiles/966.png" alt="Epic Smile 98">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/967.png')">
+                        <img src="epic smiles/967.png" alt="Epic Smile 99">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/968.png')">
+                        <img src="epic smiles/968.png" alt="Epic Smile 100">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/969.png')">
+                        <img src="epic smiles/969.png" alt="Epic Smile 101">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/970.png')">
+                        <img src="epic smiles/970.png" alt="Epic Smile 102">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/971.png')">
+                        <img src="epic smiles/971.png" alt="Epic Smile 103">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/972.png')">
+                        <img src="epic smiles/972.png" alt="Epic Smile 104">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/973.png')">
+                        <img src="epic smiles/973.png" alt="Epic Smile 105">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/974.png')">
+                        <img src="epic smiles/974.png" alt="Epic Smile 106">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/975.png')">
+                        <img src="epic smiles/975.png" alt="Epic Smile 107">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/976.png')">
+                        <img src="epic smiles/976.png" alt="Epic Smile 108">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/977.png')">
+                        <img src="epic smiles/977.png" alt="Epic Smile 109">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/978.png')">
+                        <img src="epic smiles/978.png" alt="Epic Smile 110">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/979.png')">
+                        <img src="epic smiles/979.png" alt="Epic Smile 111">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/980.png')">
+                        <img src="epic smiles/980.png" alt="Epic Smile 112">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/981.png')">
+                        <img src="epic smiles/981.png" alt="Epic Smile 113">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/982.png')">
+                        <img src="epic smiles/982.png" alt="Epic Smile 114">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/983.png')">
+                        <img src="epic smiles/983.png" alt="Epic Smile 115">
+                    </div>
+                    <div class="epic-smiles-image" onclick="openImageModal('epic smiles/984.png')">
+                        <img src="epic smiles/984.png" alt="Epic Smile 116">
+                    </div>
                 </div>
             </div>
         </div>
