Add PFP share button and remove Musically button
- Added 'Share to X' button next to Download button in PFP generator
- Share button copies PFP image to clipboard and opens Twitter with pre-filled text
- Pre-filled tweet: '@Ep1cNFTs Epic nft generator is soooooo #SWAG'
- Added notification system for user feedback
- Removed Musically button from dock and associated JavaScript functionality
- Share button has Twitter blue styling with hover effects
- Fallback to download + open Twitter if clipboard fails

--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
                 <img src="assets/718smiley.png" alt="PFP Generator" class="dock-icon">
                 <span class="dock-label">PFP Gen</span>
             </div>
-            <div class="dock-item" data-app="musicly">
-                <img src="assets/musicly.png" alt="Musicly" class="dock-icon">
-                <span class="dock-label">Musicly</span>
-            </div>
             <div class="dock-item" data-app="twitter">
                 <img src="assets/twitter.png" alt="Twitter" class="dock-icon">
                 <span class="dock-label">Twitter</span>
@@ -763,6 +759,7 @@
                         
                         <div class="pfp-actions">
                             <button class="pfp-download-btn" onclick="downloadPFP()">Download PFP</button>
+                            <button class="pfp-share-btn" onclick="sharePFP()">Share to X</button>
                             <button class="pfp-random-btn" onclick="randomizePFP()">Randomize</button>
                         </div>
                     </div>
