Add MINT button with intense effects and remove 3D asset
- Added MINT button centered beneath where 3D asset was
- Implemented crazy rainbow flashing effect cycling through all colors
- Added intense neon rainbow glow that grows larger over time on hover
- Created whole webpage shake effect on hover
- Removed 3D spinning asset and all related code
- Button has spectacular visual effects with growing glow and screen shake

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
             <span class="folder-label">Smile</span>
         </div>
         
-        <!-- 3D Spinning Asset -->
-        <div class="spinning-3d" id="3d-container">
-            <!-- 3D model will be rendered here -->
+        <!-- MINT Button -->
+        <div class="mint-button-container">
+            <button class="mint-button" id="mint-button">
+                <img src="assets/MINT.png" alt="MINT" class="mint-button-image">
+            </button>
         </div>
         
         <!-- Dock -->
